fix styling on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -5022,7 +5022,6 @@ table th {
             text-align: center;
             .gatsby-image-wrapper {
                 @media (max-width: 811px) {
-                    max-width: 100px;
                     margin-left: auto;
                     margin-right: auto;
                 }
